# arbxx

./: .gitmodules  .zenodo.json  AUTHORS  ChangeLog  Makefile.am  README.md  asv.conf.json  benchmarks.json  configure.ac  rever.xsh
.github/: codecov.yml
.github/workflows/: abi.yml  benchmark.yml  conda.yml  coverage.yml  lint.yml  test.yml
Azure/: da761e4d-env-ad4ccd01f041025553a2f90094fc0d8f.json
asv/: index.json  info.json  regressions.xml
asv/graphs/summary/: ArbBenchmark.track_time.json
doc/news/: byexample.rst
libarbxx/: configure.ac  environment.yml
libarbxx/arbxx/: arb.hpp  arbxx.hpp  arf.hpp  cereal.hpp  cppyy.hpp  forward.hpp  local.hpp.in  precision.hpp  rounding.hpp
libarbxx/benchmark/: Makefile.am  arb.benchmark.cc  arf.benchmark.cc
libarbxx/recipe/: build.sh  meta.yaml
libarbxx/src/: Makefile.am  arb.cc  arf.cc  libarbxx.map  precision.cc  rounding.cc
libarbxx/src/util/: assert.ipp  integer.ipp
libarbxx/test/: .gitignore  Makefile.am  arb.hpp  arb.test.cc  arb_generator.hpp  arf.hpp  arf.test.cc  arf.test.hpp  arf_generator.hpp  cereal.test.cc  cppyy.test.cc  libarbxx.test.sh  main.cc  precision.test.cc  rand_generator.hpp  rounding.test.cc
libarbxx/test/byexample/: Makefile.am  manual-doctest.sh.in  test-env.sh.in
libarbxx/test/byexample/extensions/: cxx.py
pyarbxx/: configure.ac  environment.yml
pyarbxx/recipe/: build.sh  meta.yaml
pyarbxx/src/: MANIFEST.in.in  Makefile.am  setup.py.in
pyarbxx/src/pyarbxx/: __init__.py  cppyy_arbxx.py  cppyy_exactreal.py
pyarbxx/src/pyarbxx/include/: cereal
pyarbxx/test/: Makefile.am  README.md  arb.py  arf.py  python-doctest.sh.in
tools/asv/: __init__.py
tools/rever/: autodist.xsh
